# GasGapG4

./: CMakeLists.txt
include/: DetectorConstruction.h  DetectorMessenger.hh  F02RunAction.hh~  GasGapElectricFieldSetup.hh  GasGapEventAction.hh  GasGapEventActionMessenger.hh  GasGapFieldMessenger.hh  GasGapHit.h  GasGapRunAction.hh  GasGapRunAction.hh~  GasGapRunAction.h~  GasGapSensitiveDetector.h  GasGapSensitiveDetector.h~  GasGapSteppingAction.hh  GasGapTrackInformation.hh  GasGapTrajectory.hh~  HistoManager.hh  HistoManager.hh~  PrimaryGenerator.h  PrimaryGeneratorMessenger.hh  RunAction.h~  SteppingAction.hh  TrGEMAnalysis.hh  TrGEMAnalysis.hh~
src/: #GasGapSteepingAction.cxx#  CMakeLists.txt  DetectorConstruction.cxx  DetectorMessenger.cc  GasGapElectricFieldSetup.cc  GasGapEventAction.cxx  GasGapEventActionMessenger.cxx  GasGapFieldMessenger.cc  GasGapHit.cxx  GasGapRunAction.cxx  GasGapSensitiveDetector.cxx  GasGapSensitiveDetector.cxx~  GasGapSteepingAction.cxx  GasGapTrackInformation.cxx  GasGapTrackingAction.cxx  GasGapTrajectory.cxx  HistoManager.cxx  PhysicsList.cc  PhysicsList.cc~  PhysicsListMessenger.cc  PrimaryGenerator.cxx  PrimaryGenerator.cxx~  PrimaryGeneratorMessenger.cc  StepMaxMessenger.cc  SteppingAction.cc  SteppingVerbose.cc  TrGEMAnalysis.cxx  TrGEMAnalysis.cxx~  main.cxx
